# vehicle

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
.devcontainer/: devcontainer.json
.github/workflows/: build-firmware.yaml
build_host_protoc/src/protoc_host-stamp/: protoc_host-source_dirinfo.txt
build_host_protoc/tmp/: protoc_host-cfgcmd.txt  protoc_host-mkdirs.cmake
components/app_files/: .gitignore  CMakeLists.txt  app_files_handler.c  app_files_handler.h  generate.py
components/app_files/web/: index.html
components/captive_portal/: CMakeLists.txt  captive_portal.c  captive_portal.h
components/httpx_server/: CMakeLists.txt  httpx_server.c  httpx_server.h
components/proto_files/: CMakeLists.txt.off  messages.proto
components/spiffs_utils/: CMakeLists.txt  spiffs_utils.c  spiffs_utils.h
components/uthash/: uthash.h
data/web/: index.html  style.css
docs/: websocket-control.puml
main/: CMakeLists.txt  app_server.c  app_server.h  camera.c  camera.h  config.c  config.h  idf_component.yml  main.c  messages.c  messages.h  misc.h  motor.c  motor.h  websocket_client.c  websocket_client.h  wifi_manager.c  wifi_manager.h
proto/: README.md  messages.proto
server/: README.md  package-lock.json  package.json
server/public/: index.html  index.js  style.css
